# Kartencrop

./: .gitignore  README.md  kartencrop_ui.spec  map_ui.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
docs/openaip_api/: OpenAIP_API_Documentation.html  openaip-default-style.json
experiments/: merge_openflightmaps_cross.py  merge_tiles_test.py  openaip_session_loader.py  render_openaip_vector_tiles.py  scrape_openaip_alternatives.py  show_test_images.py  test_403_json.py  test_403_pbf_data.py  test_brotli_decode.py  test_more_aviation_apis.py  test_openaip_detailed.py  test_openaip_public_api.py  test_openaip_tiles.py  test_openflightmaps.py  test_openflightmaps_tiles.py  test_openflightmaps_working.py  test_tile_existence.py  visualtest.py
kartencrop/: __init__.py  cache.py  capabilities.py  cli.py  crop.py  geo.py  http.py  launcher.py  leaflet_picker_component.py  openaip.py  openaip_render.py  providers.py  swissgeo.py  tiles.py  ui_actions.py  ui_bbox_picker.py  ui_models.py  ui_persistence.py  ui_render.py  ui_shared.py
legacy/: create_full_map.py  create_openflightmaps_full.py  crop_maps.py
scripts/: build_standalone_exe.ps1
tests/: test_capabilities.py  test_geo_tiles.py  test_geopf_region_selection.py  test_http_retry.py  test_kartencrop_core.py  test_launcher.py  test_live_providers.py  test_ofm_region_selection.py  test_openaip_url_builder.py  test_provider_limits.py  test_swissgeo_wms.py  test_ui_bbox_picker.py  test_ui_persistence.py  test_ui_render_smoke.py  test_ui_shared_presets.py
(+1 files in other folders)
